# project

./: .auto-claude-security.json  .auto-claude-status  .claude_settings.json  .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .gitleaks.toml  .semgrepignore  .sops.yaml  .trivyignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDENTIALS_ROTATION_LOG.md  CSRF_PROTECTION_VERIFICATION.md  FILE_VALIDATION_VERIFICATION.md  GIT_HISTORY_VERIFICATION.md  LICENSE  README.md  SECURITY.md  docker-compose.build.yml  package-lock.json  package.json  verify_csrf_protection.sh  verify_csrf_protection_manual.md  verify_file_validation.sh  verify_file_validation_manual.md  verify_rate_limiting.py  verify_rate_limiting.sh  verify_rate_limiting_manual.md  verify_secrets_e2e.py  verify_secrets_simple.py
agents/: Dockerfile  INTENT_CONTRACT_DRAFT.md  app.py  backend_client.py  cli_contract.py  copilot.py  intent_contract.py  jsonld_builders.py  llm_cache.py  observability.py  pyproject.toml  secrets.py  tay.py  test_version_validation.py  tool_executor.py  tracing.py  web_tools.py
agents/project_agents.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
agents/prompts/de/: copilot_system.j2  tay_system.j2
agents/tests/: test_app.py  test_backend_client.py  test_copilot.py  test_dogfooding.py  test_intent_contract.py  test_jsonld_builders.py  test_llm_cache.py  test_tay.py  test_tool_executor.py  test_web_tools.py
backend/: .coverage  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2026_02_13_0001_initial_schema.py  2026_02_23_0002_collaboration_workspace.py  2026_02_24_0003_org_knowledge_docs.py  (+9 more)
backend/app/: config.py  csrf.py  db.py  db_init.py  delegation.py  deps.py  dev.py  document_renderer.py  file_validator.py  http.py  idempotency.py  llm_validation.py  main.py  metrics.py  models.py  notifications.py  observability.py  org_knowledge.py  outbox.py  push_events.py  push_worker.py  rate_limit.py  secrets.py  security.py  storage.py  text_extractor.py  tracing.py  validation.py  worker.py  worker_health.py
backend/db/: schema.sql
backend/scripts/: export_jsonld_schemas.py  export_schemas.py  seed_mock_workspace_urgent_schedule.py
backend/tests/: conftest.py  test_agent_settings_container_actions.py  test_auth_integration.py  test_auth_refresh.py  test_calendar_routes.py  test_calendar_sync.py  test_cel_evaluation.py  test_chat_history.py  test_chat_instrumentation.py  test_chat_routes.py  test_collaboration_api.py  test_conflict_detection.py  test_container_manager.py  test_container_mount.py  test_container_workspace.py  test_crypto.py  test_csrf_protection.py  test_cv_integration.py  test_default_backend.py  test_delegation.py  test_dev.py  test_docling_integration.py  test_document_renderer.py  test_email_cel_rules.py  test_email_routes.py  test_email_sync.py  test_email_transform.py  test_email_worker.py  test_export.py  test_file_validation.py  test_files_and_push.py  test_flow_integration.py  test_flow_playwright.py  test_gmail_api.py  test_gmail_oauth.py  test_google_calendar_api.py  test_google_workspace_mock_harness_e2e.py  test_google_workspace_proposals.py  test_imap_client.py  test_import_job_actions.py  (+46 more)
(+1171 files in other folders)
